Load into world, datagen not working, tanks messed up